--- a/data/appartments.json
+++ b/data/appartments.json
@@ -1,38 +1,38 @@
 [
     {
         "id": 1,
-        "title": "Квартира с видом на море",
+        "title": "Квартира с видом на море 1",
         "area": 40,
         "rooms": 2,
         "type": "rent",
-        "price": "2500",
+        "price": 2500,
         "fullAdress": "г.Одесса, ул.Клёвая, 77"
     },
     {
         "id": 2,
-        "title": "Квартира с видом на море",
+        "title": "Квартира с видом на море 2",
         "area": 40,
         "rooms": 1,
         "type": "rent",
-        "price": "2500",
+        "price": 2500,
         "fullAdress": "г.Одесса, ул.Клёвая, 77"
     },
     {
         "id": 3,
-        "title": "Квартира с видом на море",
+        "title": "Квартира с видом на море 3",
         "area": 40,
         "rooms": 3,
         "type": "rent",
-        "price": "2500",
+        "price": 2500,
         "fullAdress": "г.Одесса, ул.Клёвая, 77"
     },
     {
         "id": 4,
-        "title": "Квартира с видом на море",
+        "title": "Квартира с видом на море 4",
         "area": 40,
         "rooms": 1,
         "type": "rent",
-        "price": "2500",
+        "price": 2500,
         "fullAdress": "г.Одесса, ул.Клёвая, 77"
     }
 ]
