--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "express-graphql": "^0.6.11",
     "express-validator": "^4.3.0",
+    "graphql": "^0.13.1",
+    "graphql-relay": "^0.5.4",
     "multer": "^1.3.0",
     "node-telegram-bot-api": "^0.29.0",
     "nodemon": "^1.13.3"
